--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,62 +63,76 @@ min-height:500px;
 padding:5em 0 10em;
   text-align: center;
 }
+.ul li{
+display:inline-block;
+margin-right:5em;
+font-size:14px;
+color:#fff;
+}
+.ul li span{
+left:-.5em;
+color:#00bdbd;
+}
+.ul li a{
+color:#fff;
+text-decoration:none;
+}
+.ul li a:hover{
+color:#00bdbd;
+}
 
 .header-right{
 float: right;
 margin-top: 4px;
 }
-
 .name h2 {
   text-align: center;
   font-size: 45px;
   letter-spacing: 4px;
   color: #fff;
 }
-.name span {
+.name  span {
   text-align: center;
-  font-size: 25px;
+  font-size: 14px;
   margin: 10px 0 15px;
   letter-spacing: 11px;
-  color: gray;
+  color: #ccc;
 }
-/* random word css */
 .random-word {
-  text-transform: uppercase;
-  width: auto;
-  display: inline-block;
-  
+display: inline-block;
+text-transform: uppercase;
+color: #BBAADD;
+letter-spacing: 3px;
+width: auto;
 /*   transition: all 1.25s; */
-  animation: slidedown 4s infinite;
-  -webkit-animation: slidedown 4s infinite;
-  -moz-animation: slidedown 4s infinite;
+animation: slidedown 4s infinite;
+-webkit-animation: slidedown 4s infinite;
+-moz-animation: slidedown 4s infinite;
 }
 
 @keyframes slidedown {
-  0% {
-    opacity: 50;
-  }
-  
-  5% {
-    opacity: 0;
-    transform: translateY(0.5em);
-  }
-  
-  7% {
-    transform: translateY(-1em);
-  }
-  
-  10% {
-    opacity: 0;
-  }
-  
-  20% {
-    transform: translateY(0);
-    opacity: 100;
-  }
+0% {
+  opacity: 50;
 }
 
-/* random word ends */
+5% {
+  opacity: 0;
+  transform: translateY(0.5em);
+}
+
+7% {
+  transform: translateY(-1em);
+}
+
+10% {
+  opacity: 0;
+}
+
+20% {
+  transform: translateY(0);
+  opacity: 100;
+}
+}
 
 .container.banner-drop.nav-open{
 margin-top: 8em;
@@ -126,7 +140,9 @@ margin-top: 8em;
 transition: all 0.3s ease;
 }
 
-/*menu icon css3*/
+/*
+menu icon css3
+*/
 .menu-icon {
 position: relative;
 display: block;
@@ -375,7 +391,30 @@ color:#dd4b39;
 position: relative;
   margin-bottom: 10.6em;
 }*/
-
+.banner-btm-grid-w3ls {
+  position: absolute;
+  width: 70%;
+  top: 31em;
+  left: 15.3em;
+}
+.banner-left-wthree {
+  float: left;
+  width: 49%;
+  background: #0c0c0c;
+  padding: 30px 50px;
+}
+.banner-right-w3-agileits {
+  float: right;
+  width: 49%;
+  background: #000;
+  padding: 1em;
+}
+.banner-left-wthree img {
+  margin: 0 auto;
+  width: 28%;
+  border: 2px solid #00bdbd;
+  padding: 6px;
+}
 ul.address {
   margin-top: 2em;
   border-top: 1px solid #ec1944;
@@ -384,9 +423,34 @@ ul.address {
 ul.address li {
   display: block;
 }
-
-
-
+ul.address li ul.address-text li {
+  display: inline-block;
+  font-size: 14px;
+  color: #fff;
+  margin-top: .8em;
+  font-weight: 400;
+}
+ul.address li ul.address-text li:nth-child(1){
+width: 20%;
+}
+ul.address li ul.address-text li a {
+  color: #fff;
+text-decoration:none;
+}
+ul.address li ul.address-text li a:hover{
+      color: #00bdbd;
+}
+ul.address-text b {
+  color:#fff;
+font-family: 'Oswald', sans-serif;
+letter-spacing: 1px;
+}
+.banner-right-w3-agileits iframe {
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 315px;
+}
 /*-- //banner --*/
 /*-- about --*/
 .about,.experience,.projects,.contact{
@@ -961,11 +1025,15 @@ filter: alpha(opacity=0);
 .header {
   padding: 4em 0 9em;
 }
-
+.banner-btm-grid-w3ls {
+  left: 14em;
+}
 .name h2 {
   font-size: 42px;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 332px;
+}
 .banner {
   margin-bottom: 11.6em;
 }
@@ -974,10 +1042,17 @@ filter: alpha(opacity=0);
 }
 }
 @media(max-width:1366px){
-
-
-
-
+.banner-left-wthree {
+  padding: 30px 45px;
+}
+.banner-btm-grid-w3ls {
+  width: 72%;
+  top: 29em;
+  left: 12.58em;
+}
+.banner-right-w3-agileits iframe {
+  height: 300px;
+}
 .banner {
   min-height: 630px;
   margin-bottom: 10.9em;
@@ -987,7 +1062,6 @@ filter: alpha(opacity=0);
   -moz-background-size: cover;
   -o-background-size: cover;
   -ms-background-size: cover;
-  
 }
 .name h2 {
   font-size: 37px;
@@ -1019,7 +1093,11 @@ span.about-top-w3 {
 .container.banner-drop.nav-open {
   margin-top: 7em;
 }
-
+.banner-btm-grid-w3ls {
+  width: 76%;
+  top: 27em;
+  left: 9.8em;
+}
 .banner {
   min-height: 604px;
   margin-bottom: 10.4em;
@@ -1035,7 +1113,9 @@ h5.sub {
   font-size: 1.3em;
   margin-bottom: 1.2em;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 298px;
+}
 .work-info h4 {
   font-size: 1.2em;
 }
@@ -1055,14 +1135,26 @@ h5.sub {
 .container.banner-drop.nav-open {
   margin-top: 6em;
 }
-
+.banner-left-wthree img {
+  width: 35%;
+}
 ul.address {
   margin-top: 1.6em;
 }
-
-
-
-
+.banner-left-wthree {
+  padding: 30px 40px;
+}
+ul.address li ul.address-text li {
+  font-size: 13px;
+}
+.banner-btm-grid-w3ls {
+  width: 83%;
+  top: 25.5em;
+  left: 5.8em;
+}
+.banner-right-w3-agileits iframe {
+  height: 301px;
+}
 .banner {
   min-height: 578px;
   margin-bottom: 10.5em;
@@ -1116,10 +1208,8 @@ p.pop {
 #map {
   height: 494px;
 }
-
 }
 @media(max-width:1050px){
-
 .menu-icon {
   width: 2.2em;
 }
@@ -1132,19 +1222,25 @@ p.pop {
 .name h2 {
   font-size: 31px;
 }
-.name span {
+.name p {
   font-size: 13px;
   margin: 4px 0 13px;
   letter-spacing: 9px;
 }
-
+.banner-btm-grid-w3ls {
+  width: 83%;
+  top: 22.5em;
+  left: 5.7em;
+}
 .banner {
   min-height: 538px;
   margin-bottom: 9.8em;
   background: url(../images/banner.jpg) no-repeat -96px 0px;
   background-size: cover;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 297px;
+}
 .container.banner-drop.nav-open {
   margin-top: 5em;
 }
@@ -1176,16 +1272,24 @@ p.pop {
 }
 }
 @media(max-width:1024px){
-
+.banner-left-wthree {
+  padding: 26px 35px;
+}
 ul.address {
   margin-top: 1.4em;
 }
-
+.banner-btm-grid-w3ls {
+  width: 80%;
+  top: 20.8em;
+  left: 6.5em;
+}
 ul.top-links li a i.fa {
   width: 35px;
   height: 35px;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 280px;
+}
 .banner {
   min-height: 490px;
   margin-bottom: 10em;
@@ -1220,8 +1324,17 @@ span.about-top-w3 {
   background: url(../images/banner.jpg) no-repeat -26px 0px;
   background-size: cover;
 }
-
-
+.banner-btm-grid-w3ls {
+  top: 19em;
+  left: 8em;
+  width: 74%;
+}
+.banner-left-wthree img {
+  width: 39%;
+}
+.banner-right-w3-agileits iframe {
+  height: 277px;
+}
 .work-right.work-right2 {
   min-height: 246px;
 }
@@ -1278,27 +1391,36 @@ span.about-top-w3 {
 }
 }
 @media(max-width:900px){
-
-
+.banner-btm-grid-w3ls {
+  top: 19em;
+  left: 5em;
+  width: 82%;
+}
 .name h2 {
   font-size: 27px;
 }
-.name span {
+.name p {
   margin: 3px 0 10px;
   letter-spacing: 8px;
 }
-
+ul.address li ul.address-text li {
+  margin-top: .6em;
+}
 .header {
   padding: 2em 0 5em;
 }
-
+.banner-btm-grid-w3ls {
+  top: 17.5em;
+}
 .banner {
   min-height: 435px;
   margin-bottom: 9.2em;
   background: url(../images/banner.jpg) no-repeat -33px 0px;
   background-size: cover;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 265px;
+}
 h4.title-w3ls {
   font-size: 23px;
   margin-bottom: 36px;
@@ -1323,9 +1445,16 @@ h4.title-w3ls {
 ul.address {
   margin-top: 1em;
 }
-
-
-
+.banner-left-wthree img {
+  width: 40%;
+}
+.banner-btm-grid-w3ls {
+  left: 2em;
+  width: 92%;
+}
+.banner-right-w3-agileits iframe {
+  height: 261px;
+}
 .work-info h5 {
   font-size: 17px;
   padding: 0 0.5em;
@@ -1354,8 +1483,13 @@ p.pop {
 }
 }
 @media(max-width:768px){
-
-
+.banner-left-wthree {
+  float: left;
+  width: 50%;
+}
+.banner-left-wthree {
+  padding: 26px 31px;
+}
 p.pop {
   top: 55%;
 }
@@ -1381,7 +1515,6 @@ section.bar {
 }
 }
 @media(max-width:736px){
-
 .header {
   padding: 2em 1em 5em;
 }
@@ -1391,8 +1524,12 @@ section.bar {
 .header {
   padding: 2em 1em 4em;
 }
-
-
+.banner-left-wthree {
+  padding: 26px 24px;
+}
+.banner-btm-grid-w3ls {
+  top: 16em;
+}
 .banner {
   background: url(../images/banner.jpg) no-repeat -20px 0px;
   background-size: cover;
@@ -1413,16 +1550,32 @@ span.about-top-w3 {
 .header-right nav {
   left: 13.5%;
 }
-
-
-
-
+.banner-btm-grid-w3ls {
+  left: 4.2em;
+  width: 80%;
+}
+.banner-left-wthree {
+  float: none;
+  width: 100%;
+  padding: 35px 48px;
+}
+.banner-right-w3-agileits {
+  float: none;
+  width: 100%;
+  margin-top: 10px;
+      padding: 2em;
+}
+.banner-left-wthree img {
+  width: 30%;
+}
 .banner {
   background: url(../images/banner.jpg) no-repeat -60px 0px;
   background-size: cover;
   margin-bottom: 32.8em;
 }
-
+.banner-right-w3-agileits iframe {
+  height: 215px;
+}
 span.about-top-w3 {
   font-size: 10.5px;
 }
@@ -1449,7 +1602,9 @@ p.pop {
   margin-bottom: 32.9em;
   min-height: 348px;
 }
-
+.banner-btm-grid-w3ls {
+  left: 4em;
+}
 }
 @media(max-width:600px){
 .header {
@@ -1458,12 +1613,13 @@ p.pop {
 .header-right {
   margin-top: 0;
 }
-
 .name h2 {
   font-size: 23px;
   letter-spacing: 2px;
 }
-
+.banner-btm-grid-w3ls {
+  top: 14.8em;
+}
 .banner {
   margin-bottom: 32.4em;
   min-height: 327px;
@@ -1513,12 +1669,15 @@ p.pop {
 h5.sub {
   font-size: 15px;
 }
-.name span {
+.name p {
   margin: 1px 0 8px;
   letter-spacing: 5px;
   font-size: 12px;
 }
-
+.banner-btm-grid-w3ls {
+  top: 14em;
+  left: 3.5em;
+}
 .para-w3-agile {
   font-size: 13.5px;
 }
@@ -1553,7 +1712,9 @@ section.bar {
 .work-right.work-right2 {
   min-height: 268px;
 }
-
+.banner-left-wthree img {
+  width: 33%;
+}
 p.pop {
   top: 56%;
 }
@@ -1569,18 +1730,21 @@ p.pop {
 .about, .experience, .projects, .contact {
   padding: 60px 0px;
 }
-
-
+.banner-left-wthree {
+  padding: 25px 40px;
+}
+.banner-right-w3-agileits {
+  padding: 30px;
+}
 }
 @media(max-width:480px){
-
 .header {
   padding: 1.2em .8em 2.2em;
 }
 .name h2 {
   font-size: 21px;
 }
-.name span {
+.name p {
   letter-spacing: 4px;
 }
 ul.top-links li a i.fa {
@@ -1588,7 +1752,10 @@ ul.top-links li a i.fa {
   height: 32px;
   font-size: 14px;
 }
-
+.banner-btm-grid-w3ls {
+  top: 12em;
+  left: 3em;
+}
 .social-icons ul li {
   margin: 3px !important;
 }
@@ -1596,8 +1763,15 @@ ul.top-links li a i.fa {
   margin-bottom: 26.99em;
   min-height: 270px;
 }
-
-
+.banner-right-w3-agileits {
+  padding: 25px;
+}
+.banner-right-w3-agileits iframe {
+  height: 170px;
+}
+ul.address li ul.address-text li {
+  font-size: 12.4px;
+}
 .header-right nav ul li {
   margin: .5em 1em;
 }
@@ -1668,13 +1842,12 @@ p.pop {
 }
 }
 @media(max-width:414px){
-.name span {
+.name p {
   letter-spacing: 3px;
 }
 .name h2 {
   font-size: 20px;
 }
-
 .header {
   padding: 1em .8em 2em;
 }
@@ -1682,12 +1855,18 @@ p.pop {
   margin-bottom: 28.45em;
   min-height: 240px;
 }
-
+.banner-btm-grid-w3ls {
+  top: 11.5em;
+  left: 1.56em;
+  width: 88%;
+}
 .header-right nav {
   left: 0%;
   top: -209px;
 }
-
+.banner-left-wthree {
+  padding: 25px 27px;
+}
 .container.banner-drop.nav-open {
   margin-top: 14em;
 }
@@ -1711,7 +1890,6 @@ p.pop {
 .header {
   padding: .77em .8em 1.5em;
 }
-
 .menu-icon > span {
   height: 0.16em;
 }
@@ -1721,8 +1899,16 @@ p.pop {
 .header-right nav ul li {
   width: 90%;
 }
-
-
+.banner-btm-grid-w3ls {
+  top: 10.8em;
+  left: 1.4em;
+}
+.banner-right-w3-agileits {
+  padding: 19px;
+}
+.banner-left-wthree img {
+  width: 40%;
+}
 .para-w3-agile {
   font-size: 13px;
   line-height: 28px;
@@ -1774,12 +1960,16 @@ p.pop {
 }
 
 @media(max-width:375px){
-
-
+.banner-left-wthree img {
+  width: 45%;
+}
+.banner-left-wthree {
+  padding: 20px 23px;
+}
 .name h2 {
   font-size: 19px;
 }
-.name span {
+.name p {
   letter-spacing: 2px;
   margin: 1px 0 6px;
 }
@@ -1789,7 +1979,9 @@ ul.top-links li a i.fa {
   font-size: 13px;
   line-height: 27px;
 }
-
+.banner-btm-grid-w3ls {
+  top: 10.4em;
+}
 .banner {
   margin-bottom: 30.45em;
   background: url(../images/banner.jpg) no-repeat -16px 0px;
@@ -1817,28 +2009,42 @@ p.pop {
 }
 }
 @media(max-width:320px){
-
+ul.address li ul.address-text li {
+  font-size: 12px;
+}
 .header {
   padding: .6em .8em .9em;
 }
 .name h2 {
   font-size: 18px;
 }
-.name span {
+.name p {
   letter-spacing: 2px;
   font-size: 11px;
 }
-
-
-
-
+.banner-btm-grid-w3ls {
+  top: 9.1em;
+  left: .7em;
+  width: 93%;
+}
+.banner-left-wthree {
+  padding: 17px;
+}
+ul.address li ul.address-text li:nth-child(1) {
+  width: 19%;
+}
+ul.address li ul.address-text li {
+  font-size: 11.5px;
+}
 .banner {
   margin-bottom: 29.2em;
   background: url(../images/banner.jpg) no-repeat -5px 0px;
   background-size: cover;
   min-height: 160px;
 }
-
+.banner-right-w3-agileits {
+  padding: 15px;
+}
 p.pop {
   top: 52%;
 }
